fixed alignment on projects page

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -3,12 +3,8 @@
 .Projects{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-left: 10%;
+  justify-items: center;
   margin-bottom: 5%;
-  /* flex-direction: column; */
-  /* align-items: center;
-  justify-content: center;
-  flex-wrap: wrap; */
   animation: fadeIn 3s forwards;
 }
 
